@@ -20,6 +20,7 @@ Changes since 1.5.1
 * Support debugging of Reference/SignedInfo data (SC)
 * Clean up tests for SHA2 algorithms in OpenSSL (SC)
 * Updated autoconf script, added NSS support, removed pre-automake material (SC)
+* Add methods for Reference removal to DSIGSignature/DSIGSignedInfo classes (SC)
 
 Changes between 1.5 and 1.5.1
 =====================================
